--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=FALSE npm install --prefix client && npm run build --prefix client"
   },
+  "engines": {
+    "node": "8.6.0",
+    "npm": "5.3.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
